notarius logic completed

--- a/frontend/src/App.less
+++ b/frontend/src/App.less
@@ -1,10 +1,23 @@
 @import '~antd/dist/antd.less';
 
 .App {
-  width: 900px;
+  width: 960px;
   margin: 0 auto;
+
+
+  .ant-form, h2 {
+    width: 600px;
+    margin: 20px auto
+  }
+
 }
 
 .ant-form-item-label > label {
-  width: 100px;
+  min-width: 150px;
 }
+
+.ant-picker {
+  width: 100%;
+}
+
+
