--- a/frontend/src/Components/Header/Header.less
+++ b/frontend/src/Components/Header/Header.less
@@ -2,6 +2,12 @@
 
 .main-header {
   padding: 0;
+  margin-bottom: 30px;
+
+  .auth-menu {
+    position: absolute;
+    right: 20px
+  }
 
   .ant-menu.ant-menu-dark .ant-menu-item-selected {
     background-color: @primary-4;
