--- a/frontend/src/App.less
+++ b/frontend/src/App.less
@@ -20,4 +20,13 @@
   width: 100%;
 }
 
+.poa-container {
+  width: 600px;
+  margin: 20px auto;
+
+  div {
+    display: flex;
+    justify-content: space-between;
+  }
+}
 
